[Fix] Chrome preview overflow

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,6 +34,7 @@ body {
 
 .previewable {
   line-height: 0;
+  overflow: hidden;
 }
 
 video.preview {
